Fix title position bug
Title was translated, which made it look wrong on some displays. Changed to use grid.

--- a/public/stylesheets/socials.css
+++ b/public/stylesheets/socials.css
@@ -74,8 +74,8 @@
     }
 
     #title {
-        transform: translate(0, 10rem);
         grid-column: 1 / 3;
+        grid-row: 3 / 4;
         margin: 2rem 0;
     }
 
